src/test/error/class8.lns
{
   class Hoge {
      pro fn func2();
   }
   fn Hoge.func() {
   }
   fn Hoge.func2() { // error
   }
}
